syntax = "proto3";

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto
option go_package = "internal/pkg/auth/delivery/grpc/generated";

message RegisterRequest {
  string email = 1;
  string password = 2;
}
message RegisterResponse {
  string userUID = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}
message LoginResponse {
  string token = 1;
}

message LogoutRequest {
  string token = 1;
}
message LogoutResponse {
  bool success = 1;
}

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
}
